--- a/public/shopping.html
+++ b/public/shopping.html
@@ -18,7 +18,7 @@
     <br>
     <input type="email" placeholder="enter your email" id="email" required>
     <button id="login">Login</button>
-    <button id="cart" onclick="location.href = '//localhost:4200/cart.html';">MyCart</button>
+    <button id="cart" onclick="location.href = '/cart.html';">MyCart</button>
         <table class="table table-hover table-hovered">
                 <thead>
                     <tr>
