--- a/public/shopping.html
+++ b/public/shopping.html
@@ -14,8 +14,10 @@
 </head>
 <body>
     <div class="container">
+        <label>Name:</label>
     <input type="text" placeholder="enter your name" id="name" required>
     <br>
+    <label>Email</label>
     <input type="email" placeholder="enter your email" id="email" required>
     <button id="login">Login</button>
     <button id="cart" onclick="location.href = '/cart.html';">MyCart</button>
